# DeadLandsNPCGenerator

./: .gitignore  .gitignore.bak  CMakeLists.txt  README.md  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  resources.qrc
database/: first_names.sql  first_names.sql.bak  last_names.sql  last_names.sql.bak  occupations.sql
doc/: Doxyfile
doc/html/: ability_8h_source.html  annotated.html  attribute_8h_source.html  attributes_8h_source.html  character_8h_source.html  class_ability-members.html  class_ability.html  class_attribute-members.html  class_attribute.html  class_attributes-members.html  class_attributes.html  class_character-members.html  class_character.html  class_dice-members.html  class_dice.html  class_dices-members.html  class_dices.html  class_hydrants-members.html  class_hydrants.html  class_main_window-members.html  class_main_window.html  class_overview-members.html  class_overview.html  class_session_manager-members.html  class_session_manager.html  classes.html  dice_8h_source.html  dices_8h_source.html  dir_0cecdb4f206ce84e50dfb37a6ecc3667.html  dir_68267d1309a1af8e8297ef4c3efbcdba.html  dir_729e26d18c3984b565f508bdbbbf1dda.html  dir_92783a7f0bdbd695c15c971f7f535748.html  dir_95e29a8b8ee7c54052c171a88bb95675.html  dir_9fb077707694d20b7a13b312a4d64457.html  dir_f89abcb304c928c7d889aa5625570de5.html  files.html  functions.html  functions_func.html  hierarchy.html  hydrants_8h_source.html  (+7 more)
doc/latex/: ability_8h_source.tex  annotated.tex  attribute_8h_source.tex  attributes_8h_source.tex  character_8h_source.tex  class_ability.tex  class_attribute.tex  class_attributes.tex  class_character.tex  class_dice.tex  class_dices.tex  class_hydrants.tex  class_main_window.tex  class_overview.tex  class_session_manager.tex  dice_8h_source.tex  dices_8h_source.tex  files.tex  hierarchy.tex  hydrants_8h_source.tex  mainwindow_8h_source.tex  md__r_e_a_d_m_e.tex  overview_8h_source.tex  refman.tex  sessionmanager_8h_source.tex
resources/: attributes.xml  attributes.xml.bak
src/: lsaver.cpp  lsaver.h  memio.cpp  memio.h  serializable.cpp  serializable.h
src/data/: DataManager.cpp  DataManager.h  uniqueid.cpp  uniqueid.h
src/generator/: abilities.cpp  abilities.h  ability.cpp  ability.h  attribute.cpp  attribute.h  attributes.cpp  attributes.h  card.cpp  card.h  character.cpp  character.h  dice.cpp  dice.h  dices.cpp  dices.h  edgesandhindrances.cpp  edgesandhindrances.h  hydrants.cpp  hydrants.h  overview.cpp  overview.h  rolldices.cpp  rolldices.h  tile.h  tilemanager.h  tiles.cpp  tiles.h  tileschances.cpp  tileschances.h  trait.cpp  trait.h
src/sessions/: session.cpp  session.h  sessioncharacter.cpp  sessioncharacter.h  sessionmanager.cpp  sessionmanager.h
src/widgets/: attributewidget.cpp  (+3 more)
tests/: rolldicestest.cpp  rolldicestest.h
(+16 files in other folders)
